--- a/index.html
+++ b/index.html
@@ -69,15 +69,12 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h3 class="card-title">Objetivos</h3>
               <p class="card-text">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content. This content is a little bit
-                longer.
+                Obtener un trabajo donde pueda demostrar todo mi potencial adquirido en estos años de trabajo, y
+poder seguir formándome en el ámbito comercial 
               </p>
-              <p class="card-text">
-                <small class="text-muted">Last updated 3 mins ago</small>
-              </p>
+            
             </div>
           </div>
         </div>
@@ -95,8 +92,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseOne"
               >
-                Accordion Item #1
-              </button>
+              EXPERIENCIA              </button>
             </h2>
             <div
               id="flush-collapseOne"
@@ -104,7 +100,26 @@
               aria-labelledby="flush-headingOne"
               data-bs-parent="#accordionFlushExample"
             >
-              <div class="accordion-body">hola</div>
+              <div class="accordion-body">
+                <ol>
+                  <li>
+                    <h4>Industria agroganadera del oeste SA </h4>
+                      <h6 style="font-family:monospace;">Control de calidad | 8/10/19 | hasta el dia de hoy</h6>
+                      <h5>Como control de calidad me dedico a supervisar a cada uno de los empleados para que rindan el
+                        100% en su puesto, a su vez controlar que limpien sus herramientas y las esterilicen. </h5>
+
+                  </li>
+                  <br />
+                  <li>
+                    <h4>Peluqueria IAP Marcos Paz </h4>
+                      <h6 style="font-family: monospace;">Administracion | 2/02/17 | hasta 10/09/19</h6>
+                      <h5>Empezé como pasante y llegue a administrar la palequeria, como administrador me dedicaba a
+                        controlar gastos( tanto como alquiler, como servicios entre otros ), distribuidores, alumnos y
+                        personal del lugar. </h5>
+
+                  </li>
+                </ol>
+              </div>
             </div>
           </div>
           <div class="accordion-item">
@@ -117,7 +132,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseTwo"
               >
-                Accordion Item #2
+              FORMACIÓN 
               </button>
             </h2>
             <div
@@ -126,32 +141,20 @@
               aria-labelledby="flush-headingTwo"
               data-bs-parent="#accordionFlushExample"
             >
-              <div class="accordion-body">hola</div>
+              <div class="accordion-body">
+                <li>
+                  Primario Completo
+                </li>
+                <li>
+                  Curso de peluquería profesional
+                </li>
+                <li>
+                  Curso de control de calidad dentro de la misma empresa 
+                </li>
+              </div>
             </div>
           </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingThree">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseThree"
-                aria-expanded="false"
-                aria-controls="flush-collapseThree"
-              >
-                Accordion Item #3
-              </button>
-            </h2>
-            <div
-              id="flush-collapseThree"
-              class="accordion-collapse collapse"
-              aria-labelledby="flush-headingThree"
-              data-bs-parent="#accordionFlushExample"
-            >
-              <div class="accordion-body">hola</div>
-            </div>
-          </div>
-        </div>
+          
       </section>
 
       <footer>Uriel Escalante CV &copy; 2021</footer>
