--- a/index.html
+++ b/index.html
@@ -18,16 +18,9 @@
     <title>CV Uriel Escalante</title>
   </head>
   <body>
-    <div class="container-fluid" id="contenedor" >
+    <div class="container-fluid" id="contenedor">
       <header>
         <h1>Uriel Escalante</h1>
-        <p>
-            <ul>
-                <li>Tel: 11 111 1111</li>        
-                <li>Direc: Asdasdasd</li>
-
-            </ul>
-        </p>
       </header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
@@ -62,99 +55,88 @@
         </div>
       </nav>
 
-      <div class="card mb-3 tarjeta">
-        <div class="row g-0">
-          <div class="col-md-4">
-            <img src="/img/1.jpg" alt="Chico Sentado" id="fot" />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h3 class="card-title">Objetivos</h3>
-              <p class="card-text">
-                Obtener un trabajo donde pueda demostrar todo mi potencial adquirido en estos años de trabajo, y
-poder seguir formándome en el ámbito comercial 
-              </p>
-            
+      <section class="tarjeta">
+        <div class="card mb-3" style="width: 50%; margin: 20px">
+          <div class="row g-0">
+            <div class="col-md-4">
+              <img src="/img/1.jpg" alt="Chico Sentado" class="fot" />
+            </div>
+            <div class="col-md-8">
+              <div class="card-body">
+                <h3 class="card-title">Sobre mi</h3>
+                <p class="card-text">
+                  Actualmente estoy aprendiendo programacion y estoy abierto a
+                  propuestas para desarrollador junior. Me apaciona la
+                  tecnologia, el HTML y el frond end en general. Me gustaria
+                  trabajar en un equipo donde pueda seguir aprendiendo a
+                  programar y conocer gente exepcional.
+                </p>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-
-      <section id="content">
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingOne">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseOne"
-                aria-expanded="false"
-                aria-controls="flush-collapseOne"
-              >
-              EXPERIENCIA              </button>
-            </h2>
-            <div
-              id="flush-collapseOne"
-              class="accordion-collapse collapse"
-              aria-labelledby="flush-headingOne"
-              data-bs-parent="#accordionFlushExample"
+      </section>
+      <h2 class="tituloproy">Mis Proyectos</h2>
+      <section id="content" class="row">
+        <div class="card" style="width: 30%; padding: 0">
+          <img src="/img/cvfoto.png" class="card-img-top" alt="Foto de CV" />
+          <div class="card-body">
+            <h5 class="card-title">Mi CV</h5>
+            <p class="card-text">
+              Proyecto open source destinado a mostrar mis proyectos y contar
+              sobre mi experiencia. Sentite libre de forkerarlo y modificarlo
+              para que se adapte a tu CV.
+            </p>
+            <a
+              href="https://github.com/UrielEsc06/PruebaCV"
+              target="_blank"
+              class="btn btn-primary"
+              >Ver</a
             >
-              <div class="accordion-body">
-                <ol>
-                  <li>
-                    <h4>Industria agroganadera del oeste SA </h4>
-                      <h6 style="font-family:monospace;">Control de calidad | 8/10/19 | hasta el dia de hoy</h6>
-                      <h5>Como control de calidad me dedico a supervisar a cada uno de los empleados para que rindan el
-                        100% en su puesto, a su vez controlar que limpien sus herramientas y las esterilicen. </h5>
-
-                  </li>
-                  <br />
-                  <li>
-                    <h4>Peluqueria IAP Marcos Paz </h4>
-                      <h6 style="font-family: monospace;">Administracion | 2/02/17 | hasta 10/09/19</h6>
-                      <h5>Empezé como pasante y llegue a administrar la palequeria, como administrador me dedicaba a
-                        controlar gastos( tanto como alquiler, como servicios entre otros ), distribuidores, alumnos y
-                        personal del lugar. </h5>
-
-                  </li>
-                </ol>
-              </div>
-            </div>
           </div>
-          <div class="accordion-item">
-            <h2 class="accordion-header" id="flush-headingTwo">
-              <button
-                class="accordion-button collapsed"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#flush-collapseTwo"
-                aria-expanded="false"
-                aria-controls="flush-collapseTwo"
-              >
-              FORMACIÓN 
-              </button>
-            </h2>
-            <div
-              id="flush-collapseTwo"
-              class="accordion-collapse collapse"
-              aria-labelledby="flush-headingTwo"
-              data-bs-parent="#accordionFlushExample"
+        </div>
+        <div class="card" style="width: 30%; padding: 0">
+          <img
+            src="/img/htmlycss.jpeg"
+            class="card-img-top"
+            alt="logo de html y css"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Ejercicios con html y css</h5>
+            <p class="card-text">
+              En este proyecto vas a encontrar ejercicios html que incluyen
+              pruebas con las distintas etiquetas de html5 y como poner estilos
+              a las mismas.
+            </p>
+            <a
+              href="https://github.com/UrielEsc06/EjerciciosConHTML"
+              target="_blank"
+              class="btn btn-primary"
+              >Ver</a
             >
-              <div class="accordion-body">
-                <li>
-                  Primario Completo
-                </li>
-                <li>
-                  Curso de peluquería profesional
-                </li>
-                <li>
-                  Curso de control de calidad dentro de la misma empresa 
-                </li>
-              </div>
-            </div>
           </div>
-          
+        </div>
+        <div class="card" style="width: 30%; padding: 0">
+          <img
+            src="/img/bootstrap.jpg"
+            class="card-img-top"
+            alt="logo de bootstrap"
+          />
+          <div class="card-body">
+            <h5 class="card-title">Aprendiendo Bootstrap</h5>
+            <p class="card-text">
+              En este proyecto vas a encontrar un ejercicio con bootstrap que me
+              fue útil para probar los distintos elementos que contiene y su
+              utilización.
+            </p>
+            <a
+              href="https://github.com/UrielEsc06/AprendiendoBootstrap"
+              target="_blank"
+              class="btn btn-primary"
+              >Ver</a
+            >
+          </div>
+        </div>
       </section>
 
       <footer>Uriel Escalante CV &copy; 2021</footer>
