--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <h3 class="card-title">Sobre mi</h3>
                 <p class="card-text">
                   Actualmente estoy aprendiendo programacion y estoy abierto a
-                  propuestas para desarrollador junior. Me apaciona la
-                  tecnologia, el HTML y el frond end en general. Me gustaria
+                  propuestas para desarrollador junior. Me apasiona la
+                  tecnología, el HTML y el frond end en general. Me gustaria
                   trabajar en un equipo donde pueda seguir aprendiendo a
                   programar y conocer gente exepcional.
                 </p>
